// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Retail Inventory System API Order POST /api/order creates an order expanding each product quantity into individual order_product rows: 0_RESPONSE_BODY 1`] = `
{
  "message": "Order successfully created",
  "orderId": 6,
  "status": "pending",
}
`;

exports[`Retail Inventory System API Order POST /api/order creates an order expanding each product quantity into individual order_product rows: 1_ORDERS 1`] = `
[
  {
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API Order POST /api/order creates an order expanding each product quantity into individual order_product rows: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": "10",
    "product_id": "1",
    "status_id": "pending",
  },
  {
    "id": "11",
    "product_id": "1",
    "status_id": "pending",
  },
  {
    "id": "12",
    "product_id": "2",
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API Order POST /api/order creates an order with a single product: 0_RESPONSE_BODY 1`] = `
{
  "message": "Order successfully created",
  "orderId": 5,
  "status": "pending",
}
`;

exports[`Retail Inventory System API Order POST /api/order creates an order with a single product: 1_ORDERS 1`] = `
[
  {
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API Order POST /api/order creates an order with a single product: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": "9",
    "product_id": "1",
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API Order POST /api/order returns 400 when products array is empty 1`] = `
{
  "error": "Bad Request",
  "message": [
    "products must contain at least 1 elements",
  ],
  "statusCode": 400,
}
`;

exports[`Retail Inventory System API Order POST /api/order returns 400 when products is missing 1`] = `
{
  "error": "Bad Request",
  "message": [
    "products must contain at least 1 elements",
    "products must be an array",
  ],
  "statusCode": 400,
}
`;

exports[`Retail Inventory System API Order POST /api/order returns 400 when products[].productId is not a positive integer 1`] = `
{
  "error": "Bad Request",
  "message": [
    "products.0.productId must be a positive number",
  ],
  "statusCode": 400,
}
`;

exports[`Retail Inventory System API Order POST /api/order returns 400 when products[].quantity is not a positive integer 1`] = `
{
  "error": "Bad Request",
  "message": [
    "products.0.quantity must be a positive number",
  ],
  "statusCode": 400,
}
`;

exports[`Retail Inventory System API Order POST /api/order returns 400 when the request body contains an unknown field 1`] = `
{
  "error": "Bad Request",
  "message": [
    "property unknownField should not exist",
  ],
  "statusCode": 400,
}
`;
